<resources>
    <string name="app_name">HawkPark</string>
    <string name="auth_failed">Registration failed. Please try again later!</string>
    <string name="btn_exit">Button closes activity</string>
    <string name="tag_line">Your Campus Parking Valet!</string>
    <string name="logo_large">Logo Large</string>
    <string name="btn_register">Register</string>
    <string name="tv_forgot_password">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="logo_login">Logo large</string>
    <string name="btn_ride2park">Apply for ride2park</string>
    <string name="btn_sign_up">Sign-up</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="tv_display_name">Name:</string>
    <string name="tv_welcome_ma">Welcome to HawkPark. Sign in to view your campus parking options!</string>
    <string name="signed_in_fmt">Login successful.</string>
    <string name="loading">Working on it..</string>
    <string name="signed_out">Logout successful</string>
    <string name="toast_auth_failed_ma">Authentication failed.</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="header_home">Parking Lot Status</string>
    <string name="web_client_id">681329975510-4v7i7c69rdbckjldkcdgs8j1soh0vqra.apps.googleusercontent.com</string>

    //niko's activities
    <string name="header_wmc">WHERE\'S MY CAR?</string>
    <string name="header_ride_connect">RIDE CONNECT</string>
    <string name="header_lot">""</string>
    <string name="btn_submit_lot">Submit</string>
    <string name="tv_lot_header">Parking Lot</string>
    <string name="tv_lot_howfull">"How full is this lot?"</string>
    <string name="tv_wmc_distance">"Distance to car: "</string>
    <string name="tv_r2c_connect"><u>You connected with: </u></string>
    <string name="tv_r2c_location"><u>Meeting Location: </u></string>
    <string name="tv_r2c_eta"><u>ETA: </u></string>
    <string name="radio_empty">Empty</string>
    <string name="radio_some">Some Spots</string>
    <string name="radio_full">Full</string>

    <!-- Settings Strings -->
    <string name="tv_set_name">Name: </string>
    <string name="tv_set_lotpref">Lot Preference: </string>
    <string name="et_set_displayname"> </string>
    <string name="et_set_displaylicnum"> </string>
    <string name="et_set_displaycarmod"> </string>
    <string name="et_set_displayplate"> </string>
    <string name="btn_edit_settings">Edit Settings</string>
    <string name="btn_submit_settings">Submit Changes</string>
    <string name="radio_a">Availability</string>
    <string name="radio_d">Distance</string>

    <!-- CARLOCATION STRINGS -->
    <string name="set_car_location">Set Car Location</string>
    <string name="car_location_saved">Car Location Saved</string>
    <string name="unknown">Unknown Location</string>
    <string name="carparc_diem">Parking Lot: CarParc Diem</string>
    <string name="lot_24">Parking Lot: 24</string>
    <string name="lot_60">Parking Lot: 60</string>
    <string name="time">Walking time to car: </string>
    <string name="distance">Walking distance to car: </string>
    <string name="car_lat_position">Lat</string>
    <string name="car_lng_position">Lng</string>
    <string name="car_not_set">Car location not set</string>
    <string name="last_known_lat">last_lat</string>
    <string name="last_known_lng">last_lng</string>

    <!-- GEOFENCING STRINGS -->
    <string name="geofence_transition_invalid_type">invalid %1$d</string>
    <string name="geofence_transition_entered">enter</string>
    <string name="geofence_transition_exited">exit</string>
    <string name="unknown_geofence_transition">unknown</string>
    <!-- HOMEACTIVITY STRINGS -->
    <string name="radio_btn_distance_ha">Distance</string>
    <string name="radio_btn_availability_ha">Availability</string>
    <string name="radio_btn_favorites_ha">Favorites</string>
    <string name="header_home_screen">Available Parking</string>
    <!-- R2P ACTIVITY STRINGS -->
    <string name="header_r2p_registration">Register for Ride2Park</string>
    <string name="tv_licence_num_r2p">Licence Number:</string>
    <string name="et_hint_licence_no_r2p">Enter your Licence Number.</string>
    <string name="tv_car_make_r2p">Car Make:</string>
    <string name="et_hint_car_make_r2p">Enter your car\'s make.</string>
    <string name="tv_car_model_r2p">Car Model:</string>
    <string name="et_hint_car_model_r2p">Enter your car model.</string>
    <string name="tv_licence_plates_r2p">Car Licence Plates:</string>
    <string name="et_hint_licence_plates_r2p">Enter your car\'s Licence Plate Number.</string>
    <string name="btn_settings">Settings</string>
    <string name="licence_err_r2p">Incorrect length, please try again.</string>
    <string name="header_settings_activity">Personalize</string>
    <string name="btn_home">To Home</string>
    <string name="lot_name_24">Lot 24</string>
    <string name="lot_name_carparc">CarParc Diem</string>
    <string name="lot_name_60">Lot 60</string>
    <string name="x_find_location_toast">Cannot find location</string>
    <string name="x_connect_play_services_toast">Error connecting to play services</string>
    <string name="submission_received_toast">Submission Received:</string>
    <string name="select_feedback_option_toast">Please select a Feedback option.</string>
    <string name="car_location_marker">Your Car\'s Location</string>
    <string name="you_are_here_marker">You Are Here</string>
    <string name="distance_to_car_cla">"Distance to car: "</string>
    <string name="miles_cla">" miles"</string>
    <string name="feedback_successfully_submitted_toast">Feedback successfully submitted. Thanks!</string>
    <string name="missing_info_toast_r2p">Missing information.Please try again.</string>
    <string name="success_registration_toast_r2p">Registration was successful</string>
    <string name="header_need_ride">Need A Ride</string>
    <string name="r_btn_leaving_now">Now</string>
    <string name="r_btn_leaving_in">Leaving at</string>
    <string name="tv_leaving_nr">Leaving:</string>
    <string name="choose_time">et_leaving_in_nr_hint</string>
    <string name="tv_parking_lot_nr">Parking Lot:</string>
    <string name="tv_parked_in_nr">Parked in-</string>
    <string name="et_choose_lot_nr">Choose Lot</string>
    <string name="tv_pickup_location_nr">Pick-up location:</string>
    <string name="tv_choose_location_nr">Choose location</string>
    <string name="tv_pick_up_from_nr">Pick-up from</string>
    <string name="tv_num_passengers_nr">Number of Passengers:</string>
    <string name="r_btn_three_nr">Three</string>
    <string name="r_btn_one_nr">One</string>
    <string name="r_btn_two_nr">Two</string>
    <string name="btn_submit_nr">Submit</string>
    <string name="tv_click_to_connect_nr">Click to Connect</string>
    <string name="incomplete_info">Incomplete information. Please retry.</string>
    <!--NEED A RIDE-->
    <string name="lot_name_prompt">Select Parked Spot</string>
    <string-array name="lot_names">
        <item>CarParc Diem</item>
        <item>Lot 24</item>
        <item>Lot 60</item>
    </string-array>
    <string name="pickup_prompt">Select Pickup Spot</string>
    <string name="error_saving_toast">Error saving. Please try again.</string>
    <string name="success_nr_toast">Request successfully submitted.</string>
    <string name="header_need_parking">Need to Park</string>
    <string name="tv_num_seats_np">No. of Seats:</string>
    <string name="tv_arriving_np">Arriving at:</string>
    <string name="tv_preference_np">Lot Preference:</string>
    <string name="tv_pref01_np">Preference 1</string>
    <string name="tv_pref02_np">Preference 2</string>
    <string name="tv_connect_header">HawkPark Connect</string>
    <string name="tv_connect_detail_header">You have connected with:</string>
    <string name="btn_cancel_connect">Cancel</string>
    <string name="connected_with_dialog_np_nr">You connected with:</string>
    <string name="btn_confirm_dialog_np_nr">Confirm Connect</string>
    <string name="btn_other_dialog_np_nr">Choose Other</string>
    <string-array name="pickup_location">
        <item>Rec. Center</item>
        <item>Opposite CarParc</item>
    </string-array>

    <!--ADMOB STRING - TEST AD-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="lot_feedback">You must be in the lot to provide feedback</string>
    <!--CONNECT-->
    <string name="tv_destination_str_connect">To Parking lot:</string>
    <string name="tv_meet_time_str_connect">Meeting Time :</string>
    <string name="tv_meet_spot_connect">Pick up at:</string>
    <string name="tv_car_str_connect">Look for:</string>
    <string name="placeholder">Placeholder</string>
    <string name="where_my_car_header">Where\'s my car?</string>
    <string name="r2p_register_prompt_toast">Register for r2p to take advantage of additional features</string>

</resources>
