<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite">

    <LinearLayout
        android:id="@+id/hawk_bar_default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/backgroundWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/backgroundRed"
            android:fontFamily="sans-serif-condensed"
            android:gravity="bottom|center"
            android:paddingTop="20dp"
            android:text="@string/header_settings_activity"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:contentDescription="@string/logo_large"
            android:src="@drawable/logo" />

    </LinearLayout>
    <View
        android:id="@+id/border_black"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/textBlack"
        android:layout_below="@id/hawk_bar_default"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity=""
        android:padding="15dp"
        android:layout_below="@+id/border_black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_set_name"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_set_displayname"
            android:layout_marginBottom="15dp"
            android:maxLength="15"
            android:focusable="false" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_licence_num_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_licence_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_set_displaylicnum"
            android:layout_marginBottom="15dp"
            android:maxLength="15"
            android:focusable="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_car_model_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_set_displaycarmod"
            android:layout_marginBottom="15dp"
            android:maxLength="15"
            android:focusable="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_licence_plates_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_licence_plates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_set_displayplate"
            android:layout_marginBottom="15dp"
            android:maxLength="10"
            android:focusable="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_set_lotpref"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/rg_lotpref"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/radio_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_a" />

            <RadioButton
                android:id="@+id/radio_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_d" />

        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/btn_bar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_above="@+id/border_red"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_edit_settings"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_black"
            android:padding="4dp"
            android:text="@string/btn_edit_settings"
            android:textColor="@color/textWhite"
            android:onClick="enableEdit"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_submit_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_corner_black"
            android:padding="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/btn_submit_settings"
            android:textColor="@color/textWhite"
            android:onClick="Submit"/>



    </LinearLayout>
    <View
        android:id="@+id/border_red"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/backgroundRed"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>