<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite">

    <LinearLayout
        android:id="@+id/hawk_bar_default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/backgroundWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/backgroundRed"
            android:fontFamily="sans-serif-condensed"
            android:gravity="bottom|center"
            android:paddingTop="20dp"
            android:text="@string/header_r2p_registration"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:contentDescription="@string/logo_large"
            android:src="@drawable/logo" />



    </LinearLayout>
    <View
        android:id="@+id/border_black"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/textBlack"
        android:layout_below="@id/hawk_bar_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity=""
        android:padding="15dp"
        android:layout_above="@+id/border_red">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_licence_num_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_licence_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_licence_no_r2p"
            android:textColorHint="@color/textGray"
            android:layout_marginBottom="15dp"
            android:maxLength="15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_car_make_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_car_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_car_make_r2p"
            android:textColorHint="@color/textGray"
            android:layout_marginBottom="15dp"
            android:maxLength="15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_car_model_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_car_model_r2p"
            android:textColorHint="@color/textGray"
            android:layout_marginBottom="15dp"
            android:maxLength="15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_licence_plates_r2p"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/et_licence_plates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_licence_plates_r2p"
            android:textColorHint="@color/textGray"
            android:layout_marginBottom="15dp"
            android:maxLength="10"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btn_sign_up"
            android:textColor="@color/textWhite"
            android:background="@drawable/round_corner_black"
            android:onClick="r2p_signup_clicked"/>
    </LinearLayout>
    <View
        android:id="@+id/border_red"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/backgroundRed"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
