<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/need_ride_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite">

    <LinearLayout
        android:id="@+id/hawk_bar_default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/backgroundWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/backgroundRed"
            android:fontFamily="sans-serif-condensed"
            android:gravity="bottom|center"
            android:paddingTop="20dp"
            android:text="@string/header_need_ride"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textBlack"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:contentDescription="@string/logo_large"
            android:src="@drawable/logo" />
    </LinearLayout>
    <View
        android:id="@+id/border_black"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/textBlack"
        android:layout_below="@id/hawk_bar_default"/>

    <TextView
        android:id="@+id/tv_leaving_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_marginTop="@dimen/tv_margin_top_nr"
        android:layout_marginBottom="@dimen/tv_margin_bottom_nr"
        android:layout_below="@id/border_black"
        android:text="@string/tv_leaving_nr"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radio_leaving_time_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_marginEnd="@dimen/margin_side_nr"
        android:layout_marginRight="@dimen/margin_side_nr"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_leaving_nr">

        <RadioButton
            android:id="@+id/r_btn_leaving_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_side_nr"
            android:layout_marginRight="@dimen/margin_side_nr"
            android:shadowColor="@color/backgroundRed"
            android:text="@string/r_btn_leaving_now"/>
        <RadioButton
            android:id="@+id/r_btn_leaving_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/backgroundRed"
            android:text="@string/r_btn_leaving_in"/>

    </RadioGroup>
    <EditText
        android:id="@+id/et_leaving_in_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/radio_leaving_time_nr"
        android:layout_below="@+id/tv_leaving_nr"
        android:layout_toRightOf="@+id/radio_leaving_time_nr"
        android:layout_marginEnd="@dimen/margin_side_nr"
        android:layout_marginRight="@dimen/margin_side_nr"
        android:textSize="16sp"
        android:hint="@string/choose_time"/>
    <TextView
        android:id="@+id/tv_parking_lot_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_marginTop="@dimen/tv_margin_top_nr"
        android:layout_marginBottom="@dimen/tv_margin_bottom_nr"
        android:layout_below="@id/radio_leaving_time_nr"
        android:text="@string/tv_parking_lot_nr"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_parked_in_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_below="@id/tv_parking_lot_nr"
        android:text="@string/tv_parked_in_nr"
        android:textSize="16sp"
        android:layout_alignRight="@+id/radio_leaving_time_nr"
        android:layout_alignEnd="@+id/radio_leaving_time_nr" />
    <Spinner
        android:id="@+id/spinner_parked_in_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_parking_lot_nr"
        android:layout_toRightOf="@+id/tv_parked_in_nr"
        android:layout_toEndOf="@+id/tv_parked_in_nr"
        android:layout_alignRight="@+id/et_leaving_in_nr"
        android:layout_alignEnd="@+id/et_leaving_in_nr" />
    <TextView
        android:id="@+id/tv_pickup_location_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_marginTop="@dimen/tv_margin_top_nr"
        android:layout_marginBottom="@dimen/tv_margin_bottom_nr"
        android:layout_below="@id/tv_parked_in_nr"
        android:text="@string/tv_pickup_location_nr"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_pickup_from_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_below="@id/tv_pickup_location_nr"
        android:text="@string/tv_pick_up_from_nr"
        android:textSize="16sp"
        android:layout_alignRight="@+id/radio_leaving_time_nr"
        android:layout_alignEnd="@+id/radio_leaving_time_nr" />
    <Spinner
        android:id="@+id/spinner_pickup_from_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_pickup_location_nr"
        android:layout_toRightOf="@+id/tv_pickup_from_nr"
        android:layout_toEndOf="@+id/tv_pickup_from_nr"
        android:layout_alignRight="@+id/btn_submit_nr"
        android:layout_alignEnd="@+id/btn_submit_nr" />
    <TextView
        android:id="@+id/tv_num_passengers_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_marginTop="@dimen/tv_margin_top_nr"
        android:layout_marginBottom="@dimen/tv_margin_bottom_nr"
        android:layout_below="@id/tv_pickup_from_nr"
        android:text="@string/tv_num_passengers_nr"
        android:textSize="18sp"/>
    <RadioGroup
        android:id="@+id/radio_num_passengers_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_nr"
        android:layout_marginLeft="@dimen/margin_side_nr"
        android:layout_marginEnd="@dimen/margin_side_nr"
        android:layout_marginRight="@dimen/margin_side_nr"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_num_passengers_nr">

        <RadioButton
            android:id="@+id/r_btn_one_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_side_nr"
            android:layout_marginRight="@dimen/margin_side_nr"
            android:shadowColor="@color/backgroundRed"
            android:text="@string/r_btn_one_nr"/>
        <RadioButton
            android:id="@+id/r_btn_two_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_side_nr"
            android:layout_marginRight="@dimen/margin_side_nr"
            android:shadowColor="@color/backgroundRed"
            android:text="@string/r_btn_two_nr"/>
        <RadioButton
            android:id="@+id/r_btn_three_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/backgroundRed"
            android:text="@string/r_btn_three_nr"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_submit_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radio_num_passengers_nr"
        android:layout_alignEnd="@+id/et_leaving_in_nr"
        android:layout_alignRight="@+id/et_leaving_in_nr"
        android:layout_below="@+id/spinner_pickup_from_nr"
        android:layout_toEndOf="@+id/radio_num_passengers_nr"
        android:layout_toRightOf="@+id/radio_num_passengers_nr"
        android:background="@drawable/round_corner_black"
        android:text="@string/btn_submit_nr"
        android:textColor="@color/textWhite"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_click_connect_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_submit_nr"
        android:layout_marginTop="@dimen/tv_margin_bottom_nr"
        android:background="@color/backgroundRed"
        android:padding="@dimen/tv_margin_bottom_nr"
        android:text="@string/tv_click_to_connect_nr"
        android:textAlignment="center"
        android:textStyle="bold" />
    <ListView
        android:id="@+id/lv_need_park_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_click_connect_nr"
        android:layout_above="@id/border_red"
        android:transcriptMode="alwaysScroll"
        android:padding="@dimen/margin_side_nr"
        android:layout_gravity="center_vertical">
    </ListView>


    <View
        android:id="@+id/border_red"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/backgroundRed"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>